# Secretum

./: .gitignore  AGENT_PROMPT.md  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
.cargo/: config.toml
backend/: Cargo.toml
backend/src/: auth.rs  config.rs  lib.rs  main.rs  messages.rs  persistence.rs  room.rs  static_files.rs
backend/tests/: room_test.rs
config/: secretum.example.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  wasm.d.ts
frontend/src/__tests__/: JoinRoom.test.tsx  useWasm.test.ts
frontend/src/components/: AdminPanel.tsx  Avatar.tsx  ChatRoom.tsx  ConnectionStatus.tsx  ContextMenu.tsx  EmojiPicker.tsx  FileUpload.tsx  JoinRoom.tsx  MessageInput.tsx  MessageList.tsx  Notifications.tsx  SettingsPanel.tsx  UserList.tsx
frontend/src/hooks/: useChat.ts  useCrypto.ts  useSounds.ts  useWasm.ts
frontend/src/styles/: global.css
frontend/src/types/: messages.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
wasm/tests/: lib.rs
