[package]
name = "secretum"
version = "1.0.0"
edition = "2021"
description = "Self-hosted, end-to-end encrypted private chat room"
license = "AGPL-3.0"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rust-embed = "8"
mime_guess = "2"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ts-rs = "8"
ed25519-dalek = { version = "2", features = ["serde"] }
argon2 = "0.5"
rand = "0.8"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
uuid = { version = "1", features = ["v4", "serde"] }

[features]
default = []
persistence = ["rusqlite"]

[build-dependencies]
