[package]
name = "secretum-wasm"
version = "1.0.0"
edition = "2021"
description = "WASM crypto core for Secretum"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
ed25519-dalek = { version = "2", features = ["serde"] }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
hex = "0.4"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
